[project]
name = "wikipedia-async"
version = "0.12.0"
description = "A modern async Wikipedia API client"
readme = "README.md"
license = "MIT"
authors = [
    { name = "shhossain", email = "hossain0338@gmail.com" }
]
Homepage  = "https://github.com/shhossain/wikipedia-async"
Repository = "https://github.com/shhossain/wikipedia-async"
Documentation = "https://github.com/shhossain/wikipedia-async/blob/main/docs/DOCUMENTATION.md"
license-files = ["LICENSE"]
keywords = ["wikipedia", "async", "api", "client", "aiohttp", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "aiolimiter>=1.2.1",
    "bs4>=0.0.2",
    "pydantic>=2.11.9",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
